Updated system paths